B2/B2-runtracks-cpp/jour01/job05/errors.txt
        job05.cpp: In function ‘int main()’:
        job05.cpp:12:5: error: ‘change’ was not declared in this scope; did you mean ‘echange’?
        12 |     change(a,b);
            |     ^~~~~~
            |     echange
        job05.cpp: In function ‘int change(int, int)’:
        job05.cpp:25:1: warning: no return statement in function returning non-void [-Wreturn-type]
        25 | }
            | ^
This is because the function intitialization was named echange and the definition and was named change
ACTION : Renamed correctly the functions 


            job05.cpp: In function ‘int echange(int, int)’:
            job05.cpp:25:1: warning: no return statement in function returning non-void [-Wreturn-type]
            25 | }
                | ^
            /usr/bin/ld: /tmp/cctgkHK2.o: warning: relocation against `_ZSt4cout' in read-only section `.text'
            /usr/bin/ld: /tmp/cctgkHK2.o: in function `main':
            job05.cpp:(.text+0x27): undefined reference to `std::cout'
            /usr/bin/ld: job05.cpp:(.text+0x2f): undefined reference to `std::basic_ostream<char, std::char_traits<char> >& std::operator<< <std::char_traits<char> >(std::basic_ostream<char, std::char_traits<char> >&, char const*)'
            /usr/bin/ld: job05.cpp:(.text+0x40): undefined reference to `std::cout'
            /usr/bin/ld: job05.cpp:(.text+0x48): undefined reference to `std::basic_ostream<char, std::char_traits<char> >& std::operator<< <std::char_traits<char> >(std::basic_ostream<char, std::char_traits<char> >&, char const*)'
            /usr/bin/ld: job05.cpp:(.text+0x58): undefined reference to `std::ostream::operator<<(int)'
            /usr/bin/ld: job05.cpp:(.text+0x6d): undefined reference to `std::basic_ostream<char, std::char_traits<char> >& std::operator<< <std::char_traits<char> >(std::basic_ostream<char, std::char_traits<char> >&, char const*)'
            /usr/bin/ld: job05.cpp:(.text+0x7e): undefined reference to `std::cout'
            /usr/bin/ld: job05.cpp:(.text+0x86): undefined reference to `std::basic_ostream<char, std::char_traits<char> >& std::operator<< <std::char_traits<char> >(std::basic_ostream<char, std::char_traits<char> >&, char const*)'
            /usr/bin/ld: job05.cpp:(.text+0x96): undefined reference to `std::ostream::operator<<(int)'
            /usr/bin/ld: job05.cpp:(.text+0xab): undefined reference to `std::basic_ostream<char, std::char_traits<char> >& std::operator<< <std::char_traits<char> >(std::basic_ostream<char, std::char_traits<char> >&, char const*)'
            /usr/bin/ld: job05.cpp:(.text+0xcb): undefined reference to `std::cout'
            /usr/bin/ld: job05.cpp:(.text+0xd3): undefined reference to `std::basic_ostream<char, std::char_traits<char> >& std::operator<< <std::char_traits<char> >(std::basic_ostream<char, std::char_traits<char> >&, char const*)'
            /usr/bin/ld: job05.cpp:(.text+0xe4): undefined reference to `std::cout'
            /usr/bin/ld: job05.cpp:(.text+0xec): undefined reference to `std::basic_ostream<char, std::char_traits<char> >& std::operator<< <std::char_traits<char> >(std::basic_ostream<char, std::char_traits<char> >&, char const*)'
            /usr/bin/ld: job05.cpp:(.text+0xfc): undefined reference to `std::ostream::operator<<(int)'
            /usr/bin/ld: job05.cpp:(.text+0x111): undefined reference to `std::basic_ostream<char, std::char_traits<char> >& std::operator<< <std::char_traits<char> >(std::basic_ostream<char, std::char_traits<char> >&, char const*)'
            /usr/bin/ld: job05.cpp:(.text+0x122): undefined reference to `std::cout'
            /usr/bin/ld: job05.cpp:(.text+0x12a): undefined reference to `std::basic_ostream<char, std::char_traits<char> >& std::operator<< <std::char_traits<char> >(std::basic_ostream<char, std::char_traits<char> >&, char const*)'
            /usr/bin/ld: job05.cpp:(.text+0x13a): undefined reference to `std::ostream::operator<<(int)'
            /usr/bin/ld: job05.cpp:(.text+0x14f): undefined reference to `std::basic_ostream<char, std::char_traits<char> >& std::operator<< <std::char_traits<char> >(std::basic_ostream<char, std::char_traits<char> >&, char const*)'
            /usr/bin/ld: warning: creating DT_TEXTREL in a PIE
            collect2: error: ld returned 1 exit status
This looks scary but its a begineer mistake
I didnt returned anything while the function should return a int (int echange)
ACTION : put void instead of int

            job05.cpp:20:6: error: ambiguating new declaration of ‘void echange(int, int)’
            20 | void echange(int a, int b) {
                |      ^~~~~~~
            job05.cpp:4:5: note: old declaration ‘int echange(int, int)’
                4 | int echange(int a, int b);
                |     ^~~~~~~
You could predict that error miles ahead but in fact, i forget to modify the returning type in the init.